<resources>
    <string name="app_name">XiaoYuanTong</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_session_aty">SessionAty</string>
    <string name="title_activity_system_message">SystemMessage</string>
    <string name="title_activity_app_helper_aty">AppHelperAty</string>
    <string name="title_activity_person_data_aty">PersonDataAty</string>
    <string name="school_message">&#xe689;</string>
    <string name="contact">&#xe6cc;</string>
    <string name="main">&#xe696;</string>
    <string name="find">&#xe60f;</string>
    <string name="person">&#xe690;</string>
    <string name="notifa">&#xe8ef;</string>
    <string name="back">&#xe679;</string>
    <string name="searchicon">&#xe699;</string>
    <string name="iknow">&#xe8ea;</string>
    <string name="login">&#xe6a3;</string>
    <string name="dot">&#xe60a;</string>
    <string name="score">&#xe8ea;</string>
    <string name="shedule">&#xe6bf;</string>
    <string name="cet_search">&#xe643;</string>
    <string name="swzl">&#xe698;</string>
    <string name="stay_tuned_for">&#xe88a;</string>
    <string name="add_publish">&#xe639;</string>
    <string name="add_file">&#xe601;</string>
    <string name="send_publish">&#xe623;</string>
    <string name="share_msg">&#xe619;</string>
    <string name="add">&#xe608;</string>
    <string name="delete">&#xe715;</string>
    <string name="leave_msg">&#xe629;</string>
    <string name="cancle_search">&#xe603;</string>
    <string name="phone">&#xe628;</string>
    <string name="message">&#xe622;</string>
    <string name="groupmanager">&#xe6ac;</string>
    <string name="user">&#xe676;</string>
    <string name="password">&#xe611;</string>
    <string name="addgroup">&#xe60f;</string>
    <string name="face">&#xe63f;</string>
    <string name="key_bord">&#xe609;</string>
    <string name="chat">&#xe672;</string>
    <string name="person_goods">&#xe6a4;</string>
    <string name="collect">&#xe623;</string>
    <string name="msg">&#xe61f;</string>
    <string name="good">&#xe6ce;</string>
    <string name="shake">&#xe603;</string>
    <string name="arrright">&#xe607;</string>
    <string name="arrbottom">&#xe62c;</string>
    <string name="money">&#xe664;</string>
    <string name="eye">&#xe60d;</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_publish_datas_aty">PublishDatasAty</string>
    <string name="title_activity_add_publish_aty">AddPublishAty</string>
    <string name="title_activity_show_publish_aty">ShowPublishAty</string>
    <string name="title_activity_select_person_aty">SelectPersonAty</string>
    <string name="title_activity_question_aty">QuestionAty</string>
    <string name="title_activity_show_person">ShowPerson</string>
    <string name="title_activity_show_question_aty">ShowQuestionAty</string>
    <string name="title_activity_show_question_detail_aty">ShowQuestionDetailAty</string>
    <string name="title_activity_write_answer">WriteAnswer</string>
    <string name="title_activity_write_question">WriteQuestion</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_show_msg">ShowMsg</string>
    <string name="searLabel">搜索</string>
    <string name="searHint">搜索联系人</string>
    <string name="title_activity_welcome_aty">校园通</string>
    <string name="title_activity_update_person_datas">UpdatePersonDatas</string>
    <string name="title_activity_update_user_datas_dialog">UpdateUserDatasDialog</string>
    <string name="title_activity_add_publish_by_sms">AddPublishBySMS</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="title_activity_new_friend_data">NewFriendData</string>
    <string name="title_activity_group_manager">GroupManager</string>
    <string name="title_activity_my_leave_msg_aty">MyLeaveMsgAty</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="title_activity_my_goods">MyGoods</string>
    <string name="title_activity_my_good_detail">MyGoodDetail</string>
</resources>
