<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlbar" />

    <RelativeLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"/>
    <!--底部tab栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_good"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_good"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/good"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_good"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/imb_add_friends"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="宝贝"
                android:textColor="#000"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_message"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/msg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="消息"
                android:textColor="#000"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_collect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_collect"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/collect"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_collect"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="收藏"
                android:textColor="#000"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
