<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/titlbar" />

            <TextView
                android:id="@+id/goodName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:text="商品名称"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bbbbbb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/moneyicon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/money"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/goodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/moneyicon"
                    android:gravity="center_vertical"
                    android:text="20"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/viewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="20"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/eyeicon"
                    android:text="@string/eye"
                    android:layout_toLeftOf="@id/viewCount"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bbbbbb" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/showPic"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

            </android.support.v7.widget.RecyclerView>
            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:orientation="horizontal">-->
            <!--<ImageView-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:background="#f00"-->
            <!--android:layout_height="match_parent" />-->
            <!--<ImageView-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:background="#f00"-->
            <!--android:layout_height="match_parent" />-->
            <!--<ImageView-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:background="#f00"-->
            <!--android:layout_height="match_parent" />-->
            <!--</LinearLayout>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bbbbbb" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="415dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collection"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_shape"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/collect"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/chat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_shape"
            android:gravity="center"
            android:text="@string/chat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />
    </LinearLayout>

</FrameLayout>
