<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="我的留言板"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/contacts_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:onClick="doBack"
                android:text="@string/back"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffffff" />

        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/layout_swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/my_leave_msg_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@null" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/editare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/face"
                    android:id="@+id/headface"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/key_bord"
                    android:id="@+id/keybord"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/replyedit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/leavemsg_editbk_float"
                    android:hint="hehe"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="发送" />
            </LinearLayout>

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/imagehead"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_below="@id/editare"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
    </RelativeLayout>
</FrameLayout>
