<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    style="@style/Activity.Theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.jlstudio.group.activity.ShowContactsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/holo_blue_light">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/face"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            fresco:fadeDuration="300"
            fresco:roundAsCircle="true"
            android:layout_centerVertical="true"
            fresco:placeholderImage="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recent"
                android:layout_width="57dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_left_wite"
                android:gravity="center"
                android:text="最近"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_friend"
                android:layout_width="57dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_right_blue"
                android:gravity="center"
                android:text="好友"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/main"
            android:textColor="#fff"
            android:textSize="40dp" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />
    <!--底部tab栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_add"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/add"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/imb_add_friends"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="加好友"
                android:textColor="#4848FF"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_search"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/groupmanager"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="分组"
                android:textColor="#4848FF"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_leave_msg"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/leave_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/imb_add_friends"
                android:layout_weight="2"
                android:clickable="false"
                android:gravity="center"
                android:text="留言板"
                android:textColor="#4848FF"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
